# pixel-terrain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HACKING.md  INSTALL.md  LICENSE  README.md  blockcolors.py  build_regetopt.sh  compile_flags.txt  compile_flags.txt.in  generate.py  generate_all.bash  meson.build  meson_options.txt
block/: CMakeLists.txt  block_colors_a  block_colors_a.tsv  block_colors_b  block_colors_b.tsv  block_colors_c  block_colors_c.tsv  block_colors_d  block_colors_d.tsv  block_colors_e  block_colors_e.tsv  block_colors_f  block_colors_f.tsv  block_colors_g  block_colors_g.tsv  block_colors_h  block_colors_h.tsv  block_colors_i  block_colors_i.tsv  block_colors_j  block_colors_j.tsv  block_colors_k  block_colors_k.tsv  block_colors_l  block_colors_l.tsv  block_colors_m  block_colors_m.tsv  block_colors_n  block_colors_n.tsv  block_colors_o  block_colors_o.tsv  block_colors_p  block_colors_p.tsv  block_colors_q  block_colors_q.tsv  block_colors_r  block_colors_r.tsv  block_colors_s  block_colors_s.tsv  block_colors_t  (+15 more)
block/minecraft/: block_colors_a.tsv  block_colors_b.tsv  block_colors_c.tsv  block_colors_d.tsv  block_colors_e.tsv  block_colors_f.tsv  block_colors_g.tsv  block_colors_h.tsv  block_colors_i.tsv  block_colors_j.tsv  block_colors_k.tsv  block_colors_l.tsv  block_colors_m.tsv  block_colors_n.tsv  block_colors_o.tsv  block_colors_p.tsv  block_colors_q.tsv  block_colors_r.tsv  block_colors_s.tsv  block_colors_t.tsv  block_colors_v.tsv  block_colors_w.tsv  block_colors_y.tsv  block_colors_z.tsv  upcoming.tsv
cmake/: PTFeatureFlags.cmake  require_png.cmake  require_zlib.cmake  test_utils.cmake
completion/: pixel_terrain
src/: .dir-locals.el  CMakeLists.txt  Chunk.cc  Chunk.hh  File.hh  NBT.cc  NBT.hh  PNG.cc  PNG.hh  Region.cc  Region.hh  Trie.cc  Trie.hh  Utils.cc  Utils.hh  block-server.cc  block_colors  block_colors.inc  blockd.cc  blocks.cc  blocks.hh  color.cc  color.hh  config.h.in  dir-locals.el.in  dump-nbt.cc  dumpnbt.cc  generate-image.cc  generator.cc  generator.hh  getopt_dos.hh  logger.cc  logger.hh  main.cc  meson.build  nbt-to-xml.cc  nbt.cc  nbt.hh  nbt2xml.cc  nbt_to_xml.cc  (+13 more)
src/commands/: CMakeLists.txt  threaded_worker.hh
src/commands/generate/: CMakeLists.txt  PNG.cc  PNG.hh  blocks.cc  blocks.hh  color.cc  color.hh  color_test.cc  generate_main.cc  generate_main.hh  generator.cc  generator.hh  png.cc  png.hh  worker.cc  worker.hh
src/commands/server/: CMakeLists.txt  reader.hh  reader_generic.cc  reader_generic.hh  reader_unix.cc  reader_unix.hh  request.cc  request.hh  request_test.cc  server.cc  server.hh  server_base.hh  server_generic.cc  server_generic.hh  server_unix_socket.cc  server_unix_socket.hh  writer.hh  writer_generic.cc  writer_generic.hh  writer_string.cc  writer_string.hh  writer_string_test.cc  writer_unix.cc  writer_unix.hh  writer_unix_test.cc
src/functions/: CMakeLists.txt  threaded_worker.hh
src/functions/blockserver/: CMakeLists.txt  reader.hh  reader_unix.cc  reader_unix.hh  request.cc  request.hh  request_test.cc  server.cc  server.hh  server_base.hh  server_unix_socket.cc  server_unix_socket.hh  writer.hh  writer_string.cc  writer_string.hh  writer_string_test.cc  writer_unix.cc  writer_unix.hh  writer_unix_test.cc
src/functions/imagegen/: CMakeLists.txt  PNG.cc  PNG.hh  blocks.cc  blocks.hh  color.cc  color.hh  color_test.cc  generator.cc  generator.hh  worker.cc  worker.hh
src/graphics/: CMakeLists.txt  color.cc  color.hh  color_test.cc  constants.hh  meson.build  png.cc  png.hh
src/image/: CMakeLists.txt  blocks.cc  blocks.hh  color.cc  color.hh  color_test.cc  containers.hh  generator.cc  generator.hh  image.hh  meson.build  png.cc  png.hh  utils.cc  utils.hh  utils_test.cc  worker.cc  worker.hh
src/logger/: CMakeLists.txt  logger.cc  logger.hh  meson.build  pretty_printer.cc  pretty_printer.hh
src/nbt/: CMakeLists.txt  Chunk.cc  Chunk.hh  File.hh  Region.cc  Region.hh  chunk.cc  chunk.hh  constants.hh  file.hh  meson.build  nbt-path.abnf  nbt-path.cc  nbt-path.hh  nbt-path_test.cc  nbt.cc  nbt.hh  nbt_pull_parser.cc  nbt_pull_parser.hh  nbt_pull_parser_test.cc  nbt_test.cc  nbt_to_xml.cc  region.cc  region.hh  tag.cc  tag.hh  tag_test.cc  utils.cc  utils.hh  utils_test.cc
src/nbt/pull_parser/: CMakeLists.txt  nbt_pull_parser.cc  nbt_pull_parser.hh  nbt_pull_parser_test.cc
src/nbt/testdata/: CMakeLists.txt  broken.nbt  complex-1.txt  complex-2.txt  complex-3.nbt  nbt-file.nbt  nbt-file.txt  nested-list.nbt  simple-tag-compound.nbt  single-tag-byte-array.nbt  single-tag-byte.txt  single-tag-double.txt  single-tag-float.nbt  single-tag-int-array.nbt  single-tag-int.txt  single-tag-list-int.nbt  single-tag-long-array.txt  single-tag-long.nbt  single-tag-short.txt  single-tag-string.nbt  tag-multiple.nbt
src/server/: CMakeLists.txt  meson.build  reader.hh  reader_generic.cc  reader_generic.hh  reader_unix.cc  reader_unix.hh  request.cc  request.hh  request_test.cc  server.cc  server.hh  server_base.hh  server_generic.cc  server_generic.hh  server_unix_socket.cc  server_unix_socket.hh  writer.hh  writer_generic.cc  writer_generic.hh  writer_string.cc  writer_string.hh  writer_string_test.cc  writer_unix.cc  writer_unix.hh  writer_unix_test.cc
src/utils/: CMakeLists.txt  array.hh  path_hack.hh  threaded_worker.hh  threaded_worker_test.cc
src/utils/logger/: CMakeLists.txt  logger.cc  logger.hh  pretty_printer.cc  pretty_printer.hh
src/worlds/: CMakeLists.txt  meson.build  worlds.cc  worlds.hh
subprojects/regetopt/: CMakeLists.txt  meson.build  regetopt.c
superbuild/: CMakeLists.txt
tools/: CMakeLists.txt  binary_generator.cc  block_data_generator.cc  embed_files.cc  embed_files.hh  meson.build
tools/editor-aux/: CMakeLists.txt  main.cc
