add_library(image_generator STATIC blocks.cc color.cc generate_main.cc generator.cc worker.cc png.cc)
target_include_directories(image_generator PRIVATE SYSTEM ${PNG_INCLUE_DIRS})
target_include_directories(image_generator PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
target_include_directories(image_generator PRIVATE ${CMAKE_BINARY_DIR})
target_link_libraries(image_generator INTERFACE ${PNG_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} optlib)
target_link_libraries(image_generator PRIVATE optlib)

add_boost_test(color_test imagegen_color color_test.cc)
if(TARGET color_test)
  target_link_libraries(color_test image_generator)
endif()
